# EInvoicing

./: .gitignore  README.md  build_pack_manifest.json
docs/: 00_build_pack_index.md  01_product_scope.md  02_app_architecture.md  03_data_model_and_excel_template.md  04_validation_engine.md  05_country_pack_standard.md  06_belgium_peppol_pack_spec.md  07_saudi_zatca_pack_spec.md  08_output_bundle_and_audit_trail_spec.md  (+7 more)
server/: pyproject.toml
server/app/: __init__.py  main.py
server/app/adapters/: __init__.py  base.py  registry.py
server/app/api/: __init__.py  audit.py  country_packs.py  templates.py  uploads.py
server/app/integrations/einvoicebe/: __init__.py  client.py  diagnostics.py  mapper.py  redaction.py  schemas.py
server/app/integrations/storecove/: __init__.py  client.py  mapper.py  schemas.py
server/app/models/: __init__.py  canonical.py  country_pack.py  upload.py  validation.py
server/app/services/: __init__.py  country_packs.py  evidence.py  saudi_pdf.py  saudi_qr.py  saudi_xml.py  ubl_xml.py  upload_store.py  validation.py  workbook.py
server/app/storage/: __init__.py  file_store.py
server/app/validation/: __init__.py  peppol_readiness.py  schematron_runner.py  validator_config.py  xml_models.py  xml_validator.py
server/tests/: test_api.py  test_audit_milestone_7a.py  test_belgium_milestone_2a.py  test_belgium_milestone_5b.py  test_belgium_milestone_5c.py  test_belgium_milestone_6a.py  test_belgium_milestone_6b.py  test_saudi_milestone_3a.py  test_saudi_milestone_3c.py  test_uk_milestone_5a.py  workbook_fixtures.py
(+36 files in other folders)
