[project]
name = "einvoicing-server"
version = "0.1.0"
description = "Milestone 1 FastAPI skeleton for the E-Invoicing Workbench."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

