[project]
name = "einvoicing-server"
version = "0.1.0"
description = "Milestone 1 FastAPI skeleton for the E-Invoicing Workbench."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.5",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "qrcode[pil]>=8.0",
  "playwright>=1.52.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pypdf>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
